--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#C40202</color>
     <color name="colorPrimaryDark">#9A1616</color>
     <color name="colorAccent">#F68080</color>
+      <color name="white">#FFFFFF</color>
 </resources>
